# training-kube-certification

./: .gitignore  Makefile  create_certificate.sh  read_secrets_into_k8s_cluster.sh  readme.md  sa_token_generation.yaml  service-account-creation.yaml  set-role-for-serviceaccount.yaml  set-role-for-user.yaml  update_build_extension.py  update_build_extension.sh  version
apps/application_interfaces/: Cargo.toml
apps/application_interfaces/src/: lib.rs
apps/datasource/: Cargo.toml  Rocket.toml
apps/datasource/src/: main.rs
apps/gateway/: Cargo.toml  Rocket.toml
apps/gateway/src/: main.rs
apps/service_template/: Cargo.toml
apps/service_template/src/: logging.rs  main.rs
apps/shared/src/: lib.rs
certs_phiroict/: phiroict.crt  phiroict.csr  phiroict.key
ci/concourse/infra/: concourse-ingress.yaml  concourse-namespace.yaml  concourse-postgress.yaml  concourse-service-account.yaml  concourse-web.yaml  concourse-workers.yaml  kustomization.yaml  postgress.yaml
ci/concourse/pipelines/apps/: build-microservice-gateway-dev.yaml  build-microservice-gateway.yaml
infra/ansible/dev-machine/: hosts.yaml  playbook.yaml
infra/ansible/hosts/: playbook.yaml
infra/docker/: Dockerfile  docker-compose.yml
stack/argocd/dev/: argocd-application-dev.yaml
stack/cloud/aws/: cdktf.json  demo.json  main.ts  package-lock.json  package.json  patch_cdk.tf.json.py  tsconfig.json
stack/cloud/aws/bootstrap/: state-bucket.tf  state.plan  terraform.tfstate
stack/cloud/azure/: cdktf.json  main.ts  package-lock.json  package.json
stack/helm/: Chart.yaml  values.yaml
stack/helm/environments/dev/: values.yaml
stack/helm/environments/prod/: values.yaml
stack/helm/environments/test/: values.yaml
stack/helm/environments/uat/: values.yaml
stack/helm/templates/: 00-pre-namespaces.yaml  00-service-account.yaml  01-deployment.yaml  02-service.yaml  03-ingress.yaml  deployment.yaml  service.yaml
stack/kustomize/base/: 0-service-account.yaml  00-namespace.yaml  01-deployment.yaml  02-service.yaml  03-ingress.yaml  kustomization.yaml
stack/kustomize/overlays/prod/: 00-namespace.yaml  01-deployment.yaml  02-service.yaml  03-ingress.yaml  kustomization.yaml
stack/kustomize/overlays/test/: 00-namespace.yaml  01-deployment.yaml  02-service.yaml  03-ingress.yaml  kustomization.yaml
stack/kustomize/overlays/uat/: 00-namespace.yaml  01-deployment.yaml  02-service.yaml  03-ingress.yaml  kustomization.yaml
stack/namespace_init/: namespaces.yaml
stack/servicemesh/: create-ingress-certificates.sh  inject-tls-certs-for-istio.sh
stack/tests/jmeter/: HTTP Request.jmx
stack/tests/jmeter-azure/: HTTP Request.jmx
