[package]
name = "datasource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
uuid =  { version = "1.6.0", features = ["serde", "v4"] }
chrono = "0.4.31"

serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
csv = "1.3.0"
async-trait = "0.1.77"
reqwest = "0.11.23"

shared = {path="../application_interfaces", version="0.1.0"}

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies.rocket]
version = "0.5.0"
features = ["json"]