[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
uuid =  { version = "1.1.0", features = ["serde", "v4"] }
chrono = "0.4.19"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
csv = "1.1.6"
async-trait = "0.1.56"
reqwest = { version="0.11.11", features=["json", "serde_json"] }
shared = {path="../shared", version="0.1.0"}

[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
