[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
uuid =  { version = "1.3.2", features = ["serde", "v4"] }
chrono = "0.4.24"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
csv = "1.2.1"
async-trait = "0.1.68"
reqwest = { version="0.11.17", features=["json", "serde_json"] }
shared = {path="../application_interfaces", version="0.1.0"}

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]
